--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.2",
     "date-fns": "^2.30.0",
-    "rxjs": "~7.5.7",
+    "rxjs": "^7.8.1",
     "syshub-rest-module": "^2.4.2",
     "tslib": "^2.6.2",
     "zone.js": "~0.13.3"
