--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^16.2.12",
     "@angular/platform-browser-dynamic": "^16.2.12",
     "@angular/router": "^16.2.12",
+    "@fontsource/montserrat": "^5.0.15",
     "@ng-bootstrap/ng-bootstrap": "15.1.2",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.2",
