--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.3",
     "date-fns": "^2.30.0",
+    "flag-icons": "^7.1.0",
     "ngx-device-detector": "^7.0.0",
     "rxjs": "^7.8.1",
     "syshub-rest-module": "^3.0.2",
