--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "bootstrap-icons": "^1.11.3",
     "date-fns": "^2.30.0",
     "flag-icons": "^7.1.0",
+    "marked": "9.0.0",
     "ngx-device-detector": "^7.0.0",
+    "ngx-markdown": "^17.1.1",
+    "prismjs": "1.28.0",
     "rxjs": "^7.8.1",
     "syshub-rest-module": "^3.2.3",
     "titleize": "^4.0.0",
