first successfull deployment

--- a/angular.json
+++ b/angular.json
@@ -39,7 +39,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "baseHref": "/findr",
+            "baseHref": "/findr/",
             "outputPath": "dist/findr",
             "index": "src/index.html",
             "main": "src/main.ts",
@@ -66,8 +66,8 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kb",
-                  "maximumError": "1mb"
+                  "maximumWarning": "2mb",
+                  "maximumError": "4mb"
                 },
                 {
                   "type": "anyComponentStyle",
