--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --open --ssl",
-    "build": "npm list>deps.txt & ng build",
+    "build": "ng build",
     "watch": "ng build --watch --configuration development"
   },
   "private": true,
