--- a/src/assets/config/config.json.template
+++ b/src/assets/config/config.json.template
@@ -1,7 +1,7 @@
 {
     "api": {
         "syshub": {
-            "host": "http://localhost:8088/",
+            "host": "https://localhost:8443/",
             "version": 3,
             "basic": {
                 "enabled": false,
