--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --open --ssl",
-    "build": "ng build",
+    "build": "copy /Y src\\flag-fix\\flag-icons.css node_modules\\flag-icons\\css & ng build",
     "watch": "ng build --watch --configuration development"
   },
   "private": true,
