--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -10,18 +10,6 @@ on:
     branches: [ "main" ]
 
 jobs:
-  install:
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v3
-      - uses: pnpm/action-setup@v3
-        with:
-          version: 8
-          run_install: |
-            - recursive: true
-              args: [--frozen-lockfile, --strict-peer-dependencies]
-            - args: [--global, gulp, prettier, typescript]
 
   build:
     runs-on: ubuntu-latest
@@ -37,7 +25,9 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
-        cache: 'pnpm'
+        cache: pnpm
+    - name: Install PNPM
+      run: npm i -g pnpm
     - run: pnpm ci
-    - run: pnpm run build --if-present
+    - run: pnpm i && pnpm run build --if-present
     - run: pnpm test
