--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -21,12 +21,26 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
+
     - name: Install PNPM
       run: npm i -g pnpm
-    - run: pnpm i
-    - run: pnpm run ci-build
-    - run: pnpm run ci-test
+
+    - name: Install project dependencies
+      run: pnpm i
+
+    - name: Build application
+      run: pnpm run ci-build
+      
+    - name: Run tests
+      run: pnpm run ci-test
+
+    - name: Upload coverage reports to Codecov
+      uses: codecov/codecov-action@v4.0.1
+      env:
+        token: ${{ secrets.CODECOV_TOKEN }}
+        slug: surcoufx83/sysHUB-Findr
