Configure disabled search functions #28

--- a/src/assets/config/config.json.template
+++ b/src/assets/config/config.json.template
@@ -3,12 +3,6 @@
         "syshub": {
             "host": "/",
             "version": 3,
-            "basic": {
-                "enabled": false,
-                "username": "<basic user name>",
-                "password": "<basic password>",
-                "provider": "<basic api server name>"
-            },
             "oauth": {
                 "enabled": true,
                 "clientId": "<oauth provider>",
@@ -19,6 +13,7 @@
     },
     "app": {
         "baseUrl": "/findr/",
+        "disabledFunctions": [],
         "promotionLink": "https://github.com/surcoufx83/sysHUB-Findr",
         "minPhraseLength": 3,
         "useCache": true,
