default auto logout

--- a/src/assets/config/config.json.template
+++ b/src/assets/config/config.json.template
@@ -8,6 +8,9 @@
                 "clientId": "<oauth provider>",
                 "clientSecret": "<oauth secret>",
                 "scope": "public+private"
+            },
+            "options": {
+                "autoLogoutOn401": true
             }
         }
     },
